crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__style_key_string.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "let value = style { \"\\q\": 1 }"
---
alder::syntax

  × I do not recognize this escape sequence
   ╭─[/project/src/main.ald:1:22]
 1 │ let value = style { "\q": 1 }
   ·                     ┬─┬
   ·                     │ ╰── unknown escape
   ·                     ╰── this string starts here
   ╰────
  help: use an escape such as `\n`, `\t`, `\"`, `\\`, or `\u{0041}`; a literal
        backslash is written `\\`
