crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__style_nested.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "let value = style { \":hover\": { color red } }"
---
alder::syntax

  × I was expecting `:` after this style property or selector
   ╭─[/project/src/main.ald:1:39]
 1 │ let value = style { ":hover": { color red } }
   ·                               ┬       ┬
   ·                               │       ╰── expected `:`
   ·                               ╰── this nested style block starts here
   ╰────
