crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__table_modifier_separator.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "table users { id: int() default(1 2) }"
---
alder::syntax

  × I was expecting `,` or `)` after this modifier argument
   ╭─[/project/src/main.ald:1:35]
 1 │ table users { id: int() default(1 2) }
   ·                                ┬  ┬
   ·                                │  ╰── expected `,` or `)`
   ·                                ╰── this `(` opens here
   ╰────
  help: separate modifier arguments with commas and close them with `)`
